scroll animation fix and removed overflow

--- a/7thProject/style.css
+++ b/7thProject/style.css
@@ -12,7 +12,6 @@ body {
   align-items: center;
   justify-content: center;
   /* height: 100vh; */
-  overflow: hidden;
   background-color: #efedd6;
 }
 
